chore(v1.10): archive milestone files and collapse roadmap
- Create .planning/milestones/v1.10-ROADMAP.md (full phase 71-79 details + milestone summary)
- Create .planning/milestones/v1.10-REQUIREMENTS.md (39/39 REQ-IDs satisfied, final traceability)
- Move v1.10-MILESTONE-AUDIT.md into milestones/ archive
- Collapse v1.10 entry in ROADMAP.md to <details> block, link to archive
- Update MILESTONES.md with v1.10 shipped entry (key accomplishments + deferred items)
- Evolve PROJECT.md: Current State after v1.10, Validated (v1.10), Active = empty, Last updated 2026-05-16
- Reset STATE.md to idle, record v1.10 close + deferred items + backlog candidates

Audit verdict: passed (gaps closed 2026-05-16). Final-gate ./mvnw verify -Pe2e BUILD SUCCESS, JaCoCo 87.80 %.